@@ -6,4 +6,4 @@ Makefile.in
 *.lo
 *.la
 gnome-mouse-properties
-mouse.desktop
+*.desktop
