@@ -1,3 +1,14 @@
+2004-06-15  Bastien Nocera  <hadess@hadess.net>
+
+	* actions/acme-fb-level.c: (acme_fblevel_init):
+	* actions/acme-volume-alsa.c: (acme_volume_alsa_init),
+	(acme_volume_alsa_class_init):
+	* actions/acme-volume-gstreamer.c: (acme_volume_gstreamer_init):
+	* actions/acme-volume-oss.c: (acme_volume_oss_init),
+	(acme_volume_oss_class_init):
+	* actions/acme-volume.c: (acme_volume_class_init),
+	(acme_volume_init): cleanups, and warning fixes
+
 2004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
