@@ -1,3 +1,7 @@
+2004-06-15  Bastien Nocera  <hadess@hadess.net>
+
+	* .cvsignore: upd
+
 2004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
